@@ -9,6 +9,8 @@ bzr-0.0.1  NOT RELEASED YET
     * Less file flushing and faster performance when writing logs and
       committing to stores.
 
+    * More useful verbose output from some commands.
+
   BUG FIXES:
 
     * Fix inverted display of 'R' and 'M' during 'commit -v'.
